# rulang-trainer

./: .gitignore  CMakeLists.txt
src/rulang-trainer-app/: CMakeLists.txt
src/rulang-trainer-lib/: CMakeLists.txt  Trainer.cpp  Trainer.h
src/rulang_trainer_app/: CMakeLists.txt  main.cpp
src/rulang_trainer_lib/: Admin.cpp  Admin.h  CMakeLists.txt  Exercise.cpp  Exercise.h  ExercisePool.cpp  ExercisePool.h  LanguageRule.cpp  LanguageRule.h  Student.cpp  Student.h  Trainer.cpp  Trainer.h
src/third_party_supply/: CMakeLists.txt  sqlitepp_helper.hpp  utf8_helper.hpp
